# daily-app

./: CHANGELOG.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  settings.rs  window.rs
src-tauri/src/commands/: clipboard_cmd.rs  export_cmd.rs  mod.rs  notes_cmd.rs
src-tauri/src/db/: clipboard.rs  mod.rs  notes.rs
src/bridge/: ipc.ts
src/components/clipboard/: ClipboardDetail.tsx  ClipboardEntry.tsx  ClipboardList.tsx
src/components/diagnostics/: ErrorBoundary.tsx
src/components/layout/: Shell.tsx  TitleBar.tsx
src/components/notes/: ArchiveToggle.tsx  NoteEditor.tsx  NoteList.tsx  NoteSearch.tsx
src/components/search/: SearchOverlay.tsx
src/components/settings/: SettingsPage.tsx
src/components/tags/: CategoryFilter.tsx  TagPicker.tsx
src/locales/en-US/: common.json
src/locales/zh-CN/: common.json
src/stores/: appStore.ts
src/styles/: components.css  global.css
src/types/: index.ts
